--- a/Translucence.theme.css
+++ b/Translucence.theme.css
@@ -10,7 +10,7 @@
  * @invite jzJkA6Z
  */
 
-@import url(https://capnkitten.github.io/BetterDiscord/Themes/Translucence/css/source.css);
+@import url(https://github.com/venturiq/Translucence/blob/master/Translucence.theme.css);
 
 :root {
 	--app-bg: url(https://imgur.com/a/S3p2dK7);
